[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ipfs_node"
version = "0.1.12rc2"
description = "Run an IPFS node inside of python using kubo as a library."
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
    {name = "Emendir"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "cffi>=1.15.0",
    "ipfs_tk",
]

[project.urls]
Homepage = "https://github.com/emendir/py_ipfs_node"
Repository = "https://github.com/emendir/py_ipfs_node"

[tool.setuptools]
packages = ["ipfs_node", "libkubo"]
package-dir = {"" = "src"}
